# LinearGraph-NormalTree

./: CMakeCache.txt  CMakeLists.txt  README.md  run.txt
assets/: pp.ipynb  test.csv  test10.json  test10_normal_tree.json  test10_reduced.csv  test17_eqs.csv  test17_normal_tree.json  test17_reduced.csv
assets/data/squares/sq0/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv  var.csv
assets/data/squares/sq1/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv  var.csv
assets/data/squares/sq10/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv  var.csv
assets/data/squares/sq11/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv  var.csv
assets/data/squares/sq12/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv  var.csv
assets/data/squares/sq13/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv
assets/data/squares/sq14/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv  var.csv
assets/data/squares/sq15/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv  var.csv
assets/data/squares/sq16/: edges.json  eqs.csv  normal_tree.json  reduced.csv  sources.csv  var.csv
assets/data/squares/sq17/: edges.json  eqs.csv  reduced.csv  (+3 more)
assets/tests/test10/: eqs.csv  normal_tree.json  sources.csv  var.csv
assets/tests/test17/: edges.json  eqs.csv  graph17.tex  normal_tree.json  reduced.csv  sources.csv  sources_index.csv  tree17.tex  var.csv
src/: build_tests.cpp  gen_circuits.cpp  main.cpp  normal_tree  normal_tree.cpp  state_eq.cpp  symbols.cpp
(+562 files in other folders)
